vlib/v/checker/tests/as_cast_selector_expr_err.vv
struct Foo {
mut:
	x int
}

struct Bar {
mut:
	y int
}

type Foobar = Foo | Bar

fn main() {
	mut bar := Foobar(Bar{
		y: 123
	})
	println(bar as Bar.y == 123)
}
